--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yohannesmengistu.githun/io/netflix2023",
+  "homepage": "https://yohannesmengistu.githun/io/netflixdeploy",
   "name": "netflix-aug",
   "version": "0.1.0",
   "private": true,
