--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yohannesmengistu.github/io/netflix-final.com",
+  "homepage": "https://yohannesmengistu.github/io/netflix-final",
   "name": "netflix-aug",
   "version": "0.1.0",
   "private": true,
