netflix-june updated

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://yohannesmengistu.github/io/netflix-final",
-  "name": "netflix-aug",
+  "homepage": "https://yohannesmengistu.github/io/netflix-june",
+  "name": "netflix-june",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,7 +9,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
-    "gh-pages": "^6.1.0",
     "movie-trailer": "^3.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.0"
   }
 }
