--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yohannesmengistu.github/io/netflix-june",
+  "homepage": "https://yohannesmengistu.github.io/netflix-june",
   "name": "netflix-june",
   "version": "0.1.0",
   "private": true,
