--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://yohannesmengistu.github.io/netflix-june",
   "name": "netflix-june",
   "version": "0.1.0",
   "private": true,
@@ -19,8 +18,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "npm run build && surge",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
