--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://yohannesmengistu.github.io/netflix-june24",
   "name": "netflix-june",
   "version": "0.1.0",
   "private": true,
@@ -18,7 +19,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "deploy": "npm run build && surge",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
